--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.34.4",
+    "@astrojs/vercel": "^8.2.1",
     "astro": "5.11.0",
     "astro-decap-cms-oauth": "^0.5.1",
     "sharp": "^0.34.2"
