--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/starlight": "^0.34.4",
     "@astrojs/vercel": "^8.2.1",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "5.11.0",
     "astro-decap-cms-oauth": "^0.5.1",
     "sharp": "^0.34.2"
