--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -30,6 +30,8 @@ collections:
     folder: "src/content/docs/labs"
     create: true
     slug: "{{slug}}"
+    extension: "mdx"
+    format: "frontmatter"
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Content", name: "body", widget: "markdown" }
@@ -41,6 +43,8 @@ collections:
     folder: "src/content/docs/resources"
     create: true
     slug: "{{slug}}"
+    extension: "mdx"
+    format: "frontmatter"
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Content", name: "body", widget: "markdown" }
@@ -52,6 +56,8 @@ collections:
     folder: "src/content/docs/faq"
     create: true
     slug: "{{slug}}"
+    extension: "mdx"
+    format: "frontmatter"
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Content", name: "body", widget: "markdown" }
@@ -63,6 +69,8 @@ collections:
     folder: "src/content/docs"
     create: true
     slug: "{{slug}}"
+    extension: "mdx"
+    format: "frontmatter"
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Content", name: "body", widget: "markdown" }
