--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro-decap-cms-oauth": "^0.5.1",
     "sharp": "^0.34.2",
     "starlight-giscus": "^0.6.1",
-    "starlight-scroll-to-top": "^0.1.1"
+    "starlight-scroll-to-top": "^0.1.1",
+    "@astrojs/mdx": "^4.3.0"
   }
 }
