--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.34.4",
-    "@astrojs/vercel": "^8.2.1",
+    "@astrojs/starlight": "^0.36.1",
+    "@astrojs/vercel": "^8.2.10",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "astro": "5.11.0",
+    "astro": "5.14.7",
     "astro-decap-cms-oauth": "^0.5.1",
+    "remark-admonitions": "^1.2.1",
+    "remark-directive": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "sharp": "^0.34.2",
     "starlight-giscus": "^0.6.1",
     "starlight-scroll-to-top": "^0.1.1"
