--- a/package.json
+++ b/package.json
@@ -11,20 +11,25 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.36.1",
-    "@astrojs/vercel": "^8.2.10",
+    "@astrojs/vercel": "^8.0.4",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "astro": "5.14.7",
+    "astro": "^5.15.1",
     "astro-decap-cms-oauth": "^0.5.1",
     "astro-mermaid": "^1.1.0",
     "mermaid": "^11.12.0",
+    "pixi-stats": "^1.3.10",
+    "pixi.js": "^8.14.0",
     "remark-admonitions": "^1.2.1",
     "remark-directive": "^4.0.0",
     "remark-gfm": "^4.0.1",
-    "sharp": "^0.34.2",
+    "sharp": "^0.34.4",
     "starlight-giscus": "^0.6.1",
     "starlight-github-alerts": "^0.1.1",
     "starlight-scroll-to-top": "^0.1.1",
     "starlight-site-graph": "^0.5.0"
+  },
+  "overrides": {
+    "path-to-regexp": "6.3.0"
   }
 }
