--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/vercel": "^8.0.4",
     "@docsearch/css": "^4.2.0",
     "@docsearch/js": "^4.2.0",
+    "@expressive-code/plugin-line-numbers": "^0.41.3",
     "@orama/orama": "^3.1.16",
     "@orama/react-components": "^0.8.1",
     "@vercel/analytics": "^1.5.0",
