--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sharp": "^0.34.4",
     "starlight-giscus": "^0.6.1",
     "starlight-github-alerts": "^0.1.1",
+    "starlight-image-zoom": "^0.13.2",
     "starlight-scroll-to-top": "^0.1.1",
     "starlight-site-graph": "^0.5.0"
   },
